second attempt at fixing CTA on mobile

--- a/app/assets/styles/base.css
+++ b/app/assets/styles/base.css
@@ -401,6 +401,7 @@
     margin-top: 110px;
     width: min-content;
     min-width: 240px;
+    padding: 1.2rem;
   }
 
   .footer,
